Improv styling, padding and margins, apply carousel to reviews section, fix navigation collapse

--- a/public/css/basic-styles.css
+++ b/public/css/basic-styles.css
@@ -12,8 +12,38 @@ h2 {
 	font-size: 2rem;
 	text-transform: uppercase;
 	text-align: center;
-	padding: 3.5rem;
+	padding-top: 4rem;
+	padding-bottom: 2.5rem;
 }
+
+.section_products,
+.section_reviews,
+.section_bio,
+.section_prices,
+.section_contacts {
+	padding-bottom: 4.5rem;
+}
+
+.section_products,
+.section_bio,
+.section_contacts {
+	background-color: #f7f2f9;
+}
+
+i {
+	color: #b98667;
+	height: 3rem;
+}
+
+.product_items-item,
+.prices_items-item,
+.contact_items-item {
+	border-radius: 5%;
+	padding: 1rem;
+	margin: 1.5rem;
+}
+
+/* section hero */
 
 .section_hero {
 	padding: 2rem;
@@ -29,6 +59,7 @@ h2 {
 	opacity: 0.7;
 	text-align: center;
 	height: fit-content;
+	padding-bottom: 3rem;
 }
 
 .offer h2 {
@@ -40,26 +71,10 @@ h2 {
 	padding-bottom: 2rem;
 }
 
-.button_subscribe {
-	margin-bottom: 3rem;
-}
-
 /* section products */
 
-.section_products,
-.section_bio,
-.section_contacts {
-	background-color: #f7f2f9;
-}
-
-.product_item_list {
-	padding-bottom: 3rem;
-}
-
-.product_item {
+.product_items-item {
 	border: #67a6cf 1px solid;
-	border-radius: 5%;
-	padding: 1rem;
 }
 
 /* section reviews */
@@ -68,4 +83,39 @@ h2 {
 .section_prices,
 .section_footer {
 	background-color: #d6e8f6;
+}
+
+/* section prices */
+
+.prices_items-item {
+	border: #f7f2f9 1px solid;
+	background-color: #f7f2f9;
+}
+
+.prices_items-item {
+	text-align: center;
+}
+
+.prices_items h4 {
+	padding-bottom: 1rem;
+}
+
+/* section contacts */
+
+.contact_items-item h3 {
+	border: red 1px solid;
+	border-radius: 1rem;
+	text-align: center;
+	padding: 1rem;
+	margin-bottom: 2rem;
+}
+
+/* section footer */
+
+.section_footer {
+	padding: 2rem 1rem;
+}
+
+.copyright {
+	text-align: right;
 }
